--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -56,7 +56,7 @@ steps:
     arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
 
     # do this after your tests have run
-- script: dotnet test <test-project> --logger trx --collect "Code coverage"
+- script: dotnet test <BasicTest> --logger trx --collect "Code coverage"
 - task: PublishTestResults@2
   inputs:
     testRunner: VSTest
